syntax = "proto3";
option java_package = "com.techsingou.customerservice.stub";

service CustomerService {
  rpc getAllCustomers(GetAllCustomersRequest) returns (GetAllCustomersResponse);
  rpc getCustomerById(GetCustomerByIdRequest) returns (GetCustomerByIdResponse);
  rpc saveCustomer(SaveCustomerRequest) returns (SaveCustomerResponse);
}

message GetAllCustomersRequest {}

message GetAllCustomersResponse{
  repeated Customer customers = 1;
}

message Customer {
  int64 id = 1;
  string name = 2;
  string email = 3;
}

message GetCustomerByIdRequest{
  int64 customerId = 1;
}

message GetCustomerByIdResponse {
  Customer customer = 1;
}

message NewCustomerDTO {
  string name = 2;
  string email = 3;
}

message SaveCustomerRequest{
  NewCustomerDTO newCustomerDTO = 1;
}

message SaveCustomerResponse{
  Customer savedCustomer = 1;
}